--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,7 +17,7 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   align-items: center;
 }
 
@@ -31,14 +31,17 @@ body {
   height: 20%;
   border-radius: 20px;
   min-width: 500px;
+  min-height: 170px;
+  margin: 30px;
 }
 
 .main-card {
   border: 2px solid white;
   border-radius: 20px;
-  height: 60%;
-  width: 60%;
+  /* height: 60%; */
+  width: 70%;
   min-width: 500px;
+  padding: 10px;
 }
 
 .sidebar {
@@ -52,6 +55,7 @@ body {
   flex-direction: column;
   justify-content: space-around;
   min-width: 35px;
+  min-height: 150px;
 }
 
 .profile-picture {
@@ -64,4 +68,39 @@ body {
   border-radius: 40%;
   width: 100px;
   height: 120px;
+}
+
+.page {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  width: 95%;
+  height: 100%;
+  margin: 10px;
+  /* background-color: red; */
+}
+
+.page-menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.section-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 5px;
+  height: 100px;
+  &:hover {
+    cursor: pointer;
+  }
 }
