--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,13 @@
 body {
   margin: 0;
-  background-color: black;
+  background-color: #0c0c0c;
 }
 
 .row-container {
-  height: 100vh;
+  /* height: 100vh; */
   width: 100vw;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
   align-items: center;
 }
 
@@ -17,7 +16,6 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-around; */
   align-items: center;
 }
 
@@ -25,37 +23,34 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  border: 2px solid white;
+  border: 2px solid #e5e5e5;
   border-radius: 20px;
-  width: 60%;
   height: 20%;
   border-radius: 20px;
-  min-width: 500px;
+  min-width: 350px;
   min-height: 170px;
   margin: 30px;
 }
 
 .main-card {
-  border: 2px solid white;
+  border: 2px solid #e5e5e5;
   border-radius: 20px;
-  /* height: 60%; */
-  width: 70%;
-  min-width: 500px;
-  padding: 10px;
+  min-width: 350px;
 }
 
 .sidebar {
-  border: 2px solid white;
   width: 3%;
-  height: 40%;
+  height: 350px;
   border-radius: 0 20px 20px 0;
-  background-color: white;
+  background-color: #e5e5e5;
   opacity: 60%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  min-width: 35px;
+  min-width: 30px;
   min-height: 150px;
+  position: fixed;
+  top: 30%;
 }
 
 .profile-picture {
@@ -76,8 +71,7 @@ body {
   align-content: center;
   width: 95%;
   height: 100%;
-  margin: 10px;
-  /* background-color: red; */
+  margin: 70px;
 }
 
 .page-menu {
@@ -97,9 +91,8 @@ body {
 .section {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  align-items: center;
   padding: 5px;
-  height: 100px;
   &:hover {
     cursor: pointer;
   }
