--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,45 +12,29 @@ body {
 }
 
 .col-container {
-  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
 }
 
 .head-card {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   border: 2px solid #e5e5e5;
   border-radius: 20px;
-  height: 20%;
   border-radius: 20px;
   min-width: 350px;
-  min-height: 170px;
   margin: 30px;
+  height: 20%;
 }
 
 .main-card {
   border: 2px solid #e5e5e5;
   border-radius: 20px;
   min-width: 350px;
-}
-
-.sidebar {
-  width: 3%;
-  height: 350px;
-  border-radius: 0 20px 20px 0;
-  background-color: #e5e5e5;
-  opacity: 60%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  min-width: 30px;
-  min-height: 150px;
-  position: fixed;
-  top: 30%;
 }
 
 .profile-picture {
